# rules_vitest

./: .bazelignore  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
example/simple/: BUILD.bazel
example/snapshots/: BUILD.bazel  snapshots.test.js
example/snapshots/__snapshots__/: snapshots.test.js.snap
example/ts/: BUILD.bazel
vitest/: BUILD.bazel  defs.bzl  dependencies.bzl
vitest/private/: BUILD.bazel  maybe.bzl  vitest.config.template.mts  vitest.config.template.ts  vitest_test.bzl  vitest_test_rule.bzl
